下拉刷新，还有bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.qingfengmy"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -27,4 +27,6 @@ dependencies {
     compile files('libs/android-support-v7-recyclerview.jar')
     compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/zxing.jar')
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.nispok:snackbar:2.0.1'
 }
