--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     compile files('libs/zxing.jar')
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.nispok:snackbar:2.0.1'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
+    compile 'com.mcxiaoke.volley:library:1.0.10'
+    compile 'com.google.code.gson:gson:2.3.1'
     compile project(':extras:library')
 }
