添加了聚合数据提供的一些数据用来做json测试，并学习了retrofit和activityAndroid两个第三方框架

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
     compile 'com.mcxiaoke.volley:library:1.0.10'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile project(':extras:SwipeBackLibrary')
     compile project(':extras:PullToRefreshLibrary')
+    compile project(':extras:ptr-lib')
+    compile project(':extras:endless')
 }
