--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".ui.app.KitDemoApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -66,6 +67,9 @@
             android:name=".ui.RefreshListViewActivity"
             android:screenOrientation="portrait"></activity>
         <activity
+            android:name=".ui.SwipeRefreshActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name=".ui.DetailActivity"
             android:screenOrientation="portrait"></activity>
         <activity
@@ -80,6 +84,12 @@
         <activity
             android:name=".ui.VolleyActivity"
             android:screenOrientation="portrait"></activity>
+
+        <meta-data android:name="AA_DB_NAME" android:value="joke.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data
+            android:name="joke"
+            android:value="com.qingfengmy.ui.network.entities.Joke" />
     </application>
 
 </manifest>
