--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/app_name"
+            android:name=".ui.SplashActivity"
+            android:theme="@style/splash"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.TabHostActivity"
@@ -125,6 +129,12 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.TreeActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.BrokenLineActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.HideOnScrollActivity"
             android:screenOrientation="portrait"></activity>
 
         <meta-data
