canvas 画折线图和模仿google+滚动隐藏toolbar效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,7 +116,7 @@
             android:name=".ui.ClippingActivity"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".ui.TintingActivity"
+            android:name=".ui.TintingsActivity"
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.SvgActivity"
