look over picture in big style; custom progressbar...

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':app'
 include ':extras:ptr-lib'
 include ':extras:endless'
 include ':extras:StikkyHeader'
+include ':extras:photo-library'
