--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:name=".ui.app.KitDemoApplication"
         android:allowBackup="true"
@@ -139,6 +139,15 @@
 
         <activity
             android:name=".ui.WeiXinActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.PhotoActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.ProgressBarActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.DumpActivity"
             android:screenOrientation="portrait"></activity>
 
         <meta-data
