--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.felipecsl:gifimageview:1.0.6'
     compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.r0adkll:slidableactivity:2.0.1'
+    compile 'com.facebook.fresco:fresco:0.1.0+'
     compile project(':extras:ptr-lib')
     compile project(':extras:endless')
     compile project(':extras:StikkyHeader')
