--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -173,16 +173,22 @@
             android:name=".ui.SingleInstanceActivity"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.MultiThreadDownloadActivity"
+            android:screenOrientation="portrait"></activity>
 
+        <service android:name=".ui.service.DownloadService"/>
         <meta-data
             android:name="AA_DB_NAME"
             android:value="joke.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+
         <meta-data
-            android:name="joke"
-            android:value="com.qingfengmy.ui.network.entities.Joke" />
+            android:name="AA_MODELS"
+            android:value="com.qingfengmy.ui.network.entities.Joke,com.qingfengmy.ui.entity.ThreadInfo" />
+
     </application>
 
 </manifest>
