--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -180,14 +180,10 @@
         <service android:name=".ui.service.DownloadService"/>
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="joke.db" />
+            android:value="kits.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
-
-        <meta-data
-            android:name="AA_MODELS"
-            android:value="com.qingfengmy.ui.network.entities.Joke,com.qingfengmy.ui.entity.ThreadInfo" />
 
     </application>
 
