--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'com.facebook.fresco:fresco:0.1.0+'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile project(':extras:ptr-lib')
     compile project(':extras:endless')
     compile project(':extras:StikkyHeader')
