--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.+'
     compile 'com.android.support:appcompat-v7:22.+'
     compile 'com.jakewharton:butterknife:6.0.0'
@@ -32,7 +37,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.nispok:snackbar:2.0.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
-    compile 'com.mcxiaoke.volley:library:1.0.10'
+    compile 'com.mcxiaoke.volley:library:1.0.15'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
@@ -41,6 +46,8 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'com.facebook.fresco:fresco:0.1.0+'
+    compile 'org.apache.httpcomponents:httpmime:4.4.1'
+
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile project(':extras:ptr-lib')
