--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion 22
@@ -19,24 +18,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    packagingOptions {
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/LICENSE.txt'
-    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.+'
-    compile 'com.android.support:appcompat-v7:22.+'
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.jakewharton:butterknife:6.0.0'
-    compile 'com.android.support:appcompat-v7:22.+'
-    compile 'com.android.support:recyclerview-v7:22.+'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    compile files('libs/zxing.jar')
-    compile 'com.android.support:cardview-v7:22.+'
     compile 'com.nispok:snackbar:2.0.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
     compile 'com.mcxiaoke.volley:library:1.0.15'
@@ -45,13 +39,15 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.felipecsl:gifimageview:1.0.6'
-    compile 'com.android.support:palette-v7:22.+'
+    compile 'com.android.support:palette-v7:22.2.1'
     compile 'com.r0adkll:slidableactivity:2.0.1'
     compile 'com.facebook.fresco:fresco:0.1.0+'
-    compile 'org.apache.httpcomponents:httpmime:4.4.1'
-    compile 'com.android.support:design:22.2.0'
     compile 'com.afollestad:material-dialogs:0.7.6.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'org.apache.httpcomponents:httpmime:4.4.1'
+    compile 'io.reactivex:rxjava:1.0.6'
+    compile 'io.reactivex:rxandroid:0.24.0'
+    compile files('libs/zxing.jar')
     compile project(':extras:ptr-lib')
     compile project(':extras:StikkyHeader')
     compile project(':extras:photo-library')
