--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://oss.jfrog.org/libs-snapshot' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:1.0.0"
-        classpath "com.android.databinding:dataBinder:1.0-rc0"
+        classpath "com.android.tools.build:gradle:1.3.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,9 +17,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-    }
-    repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://oss.jfrog.org/libs-snapshot' }
     }
 }
