--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
 
         <activity
             android:name=".ui.SplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/splash">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
